Day004 numerical system

--- a/Homework/Day_002_hw.ipynb
+++ b/Homework/Day_002_hw.ipynb
@@ -62,6 +62,101 @@
     "Output:\n",
     "$$f(x)=tanh(x)=\\frac{(e^x-e^{-x})}{(e^x+e^{-x})}$$\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{verbatim}\n",
+       "The analogue of IPython's `%%latex` is\n",
+       "```\n",
+       "display(\"text/latex\", \"\"\"\n",
+       "...latex text...\n",
+       "\"\"\")\n",
+       "```\n",
+       "in Julia.  Note, however, that `$` and `\\` in the LaTeX text\n",
+       "needs to be escaped as `\\$` and `\\\\` so that they aren't\n",
+       "interpreted by Julia.  See, however, the\n",
+       "[LaTeXStrings package](https://github.com/stevengj/LaTeXStrings.jl)\n",
+       "for easier input of LaTeX text as\n",
+       "L\"\"\"\n",
+       "...latex text...\n",
+       "\"\"\"\n",
+       "without requiring any extra backslashes.\n",
+       "\\end{verbatim}\n"
+      ],
+      "text/markdown": [
+       "````\n",
+       "The analogue of IPython's `%%latex` is\n",
+       "```\n",
+       "display(\"text/latex\", \"\"\"\n",
+       "...latex text...\n",
+       "\"\"\")\n",
+       "```\n",
+       "in Julia.  Note, however, that `$` and `\\` in the LaTeX text\n",
+       "needs to be escaped as `\\$` and `\\\\` so that they aren't\n",
+       "interpreted by Julia.  See, however, the\n",
+       "[LaTeXStrings package](https://github.com/stevengj/LaTeXStrings.jl)\n",
+       "for easier input of LaTeX text as\n",
+       "L\"\"\"\n",
+       "...latex text...\n",
+       "\"\"\"\n",
+       "without requiring any extra backslashes.\n",
+       "````\n"
+      ],
+      "text/plain": [
+       "\u001b[36m  The analogue of IPython's `%%latex` is\u001b[39m\n",
+       "\u001b[36m  ```\u001b[39m\n",
+       "\u001b[36m  display(\"text/latex\", \"\"\"\u001b[39m\n",
+       "\u001b[36m  ...latex text...\u001b[39m\n",
+       "\u001b[36m  \"\"\")\u001b[39m\n",
+       "\u001b[36m  ```\u001b[39m\n",
+       "\u001b[36m  in Julia.  Note, however, that `$` and `\\` in the LaTeX text\u001b[39m\n",
+       "\u001b[36m  needs to be escaped as `\\$` and `\\\\` so that they aren't\u001b[39m\n",
+       "\u001b[36m  interpreted by Julia.  See, however, the\u001b[39m\n",
+       "\u001b[36m  [LaTeXStrings package](https://github.com/stevengj/LaTeXStrings.jl)\u001b[39m\n",
+       "\u001b[36m  for easier input of LaTeX text as\u001b[39m\n",
+       "\u001b[36m  L\"\"\"\u001b[39m\n",
+       "\u001b[36m  ...latex text...\u001b[39m\n",
+       "\u001b[36m  \"\"\"\u001b[39m\n",
+       "\u001b[36m  without requiring any extra backslashes.\u001b[39m"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%latex\n",
+    "\\begin{equation}\n",
+    "\\LARGE f(\\displaystyle\\sum_i w_i x_i + b)\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\LARGE f(\\displaystyle\\sum_i w_i x_i + b)$\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(\"text/latex\",\"\"\"\n",
+    "\\$\\\\LARGE f(\\\\displaystyle\\\\sum_i w_i x_i + b)\\$\n",
+    "\"\"\")"
+   ]
   }
  ],
  "metadata": {
