--- a/Homework/Day_001_practice.ipynb
+++ b/Homework/Day_001_practice.ipynb
@@ -109,7 +109,84 @@
    "source": [
     "In Julia 1.4.0, **Pkg.installed()** is deprecated and replaced by **Pkg.dependencies()**.\n",
     "\n",
-    "See this [issue](https://github.com/JuliaLang/Pkg.jl/issues/1724) and this [discussion](https://discourse.julialang.org/t/how-to-use-pkg-dependencies-instead-of-pkg-installed/36416)"
+    "See this [issue](https://github.com/JuliaLang/Pkg.jl/issues/1724) and this [discussion](https://discourse.julialang.org/t/how-to-use-pkg-dependencies-instead-of-pkg-installed/36416)\n",
+    "\n",
+    "Maybe use the following code cell to check the installed packages (built-in, installed and dependent packages)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ZMQ => 1.2.0\n",
+      "Distributed => nothing\n",
+      "Base64 => nothing\n",
+      "SHA => nothing\n",
+      "BinaryProvider => 0.5.8\n",
+      "IJulia => 1.21.1\n",
+      "SoftGlobalScope => 1.0.10\n",
+      "Mmap => nothing\n",
+      "VersionParsing => 1.2.0\n",
+      "Dates => nothing\n",
+      "Pkg => nothing\n",
+      "InteractiveUtils => nothing\n",
+      "DataAPI => 1.1.0\n",
+      "LibGit2 => nothing\n",
+      "Sockets => nothing\n",
+      "MbedTLS => 0.7.0\n",
+      "Random => nothing\n",
+      "Printf => nothing\n",
+      "WeakRefStrings => 0.6.2\n",
+      "JSON => 0.21.0\n",
+      "CategoricalArrays => 0.7.7\n",
+      "Statistics => nothing\n",
+      "DelimitedFiles => nothing\n",
+      "SparseArrays => nothing\n",
+      "Future => nothing\n",
+      "DataValueInterfaces => 1.0.0\n",
+      "SortingAlgorithms => 0.3.1\n",
+      "FileWatching => nothing\n",
+      "DataStructures => 0.17.10\n",
+      "Missings => 0.4.3\n",
+      "Markdown => nothing\n",
+      "Parsers => 0.3.12\n",
+      "Logging => nothing\n",
+      "CSV => 0.5.26\n",
+      "Conda => 1.4.1\n",
+      "PooledArrays => 0.5.3\n",
+      "FilePathsBase => 0.7.0\n",
+      "Unicode => nothing\n",
+      "UUIDs => nothing\n",
+      "ZeroMQ_jll => 4.3.2+1\n",
+      "Tables => 1.0.3\n",
+      "IteratorInterfaceExtensions => 1.0.0\n",
+      "OrderedCollections => 1.1.0\n",
+      "InvertedIndices => 1.0.0\n",
+      "SharedArrays => nothing\n",
+      "DataFrames => 0.20.2\n",
+      "Test => nothing\n",
+      "Serialization => nothing\n",
+      "Compat => 3.8.0\n",
+      "Reexport => 0.2.0\n",
+      "TableTraits => 1.0.0\n",
+      "LinearAlgebra => nothing\n",
+      "Libdl => nothing\n",
+      "REPL => nothing\n"
+     ]
+    }
+   ],
+   "source": [
+    "using Pkg\n",
+    "\n",
+    "d = Pkg.dependencies()\n",
+    "for i in values(d)\n",
+    "   println(i.name, \" => \", i.version)\n",
+    "end"
    ]
   },
   {
@@ -313,8 +390,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 建立獨立環境\n",
+    "In julia, create an environment separate from the system environment, called a project.\n",
+    "The concept of the project is similar to Python's virtual environment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Pkg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Activate the environment at \"string\"\n",
+    "Pkg.activate(\".\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print out the status of the project/manifest\n",
+    "# Pkg.status with package arguments requires at least Julia 1.1.\n",
+    "Pkg.status()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If a Manifest.toml file exists in the active project, download all the\n",
+    "# packages declared in that manifest. Otherwise, resolve a set of feasible\n",
+    "# packages from the Project.toml files and install them.\n",
+    "Pkg.instantiate(;verbose=false)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Precompile all the dependencies of the project.\n",
+    "# This function requires at least Julia 1.3. On earlier versions you\n",
+    "# can use Pkg.API.precompile() or the precompile Pkg REPL command.\n",
+    "Pkg.precompile()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# References:\n",
+    "- Marathon example notebook\n",
     "- [深入淺出 Julia 套件管理 (Package Management)](https://medium.com/@jamescchuang/%E6%B7%B1%E5%85%A5%E6%B7%BA%E5%87%BA-julia-%E5%A5%97%E4%BB%B6%E7%AE%A1%E7%90%86-package-management-617b424d1d1d)\n",
+    "- [Project.toml and Manifest.toml](https://julialang.github.io/Pkg.jl/dev/toml-files/)\n",
     "- [To create a file in Julia](https://discourse.julialang.org/t/to-create-a-file-in-julia/20312)\n",
     "- [[SO]: How to delete a file from the working directory in Julia?](https://stackoverflow.com/questions/51807611/how-to-delete-a-file-from-the-working-directory-in-julia)"
    ]
