Solve latex display problem

--- a/Homework/Day_004_hw.ipynb
+++ b/Homework/Day_004_hw.ipynb
@@ -12,8 +12,8 @@
     "\n",
     "|是否有正負號|型別|<div style=\"width:120px\">最大值</div>|<div style=\"width:120px\">最小值</div>|\n",
     "|---|---|---|---|\n",
-    "|有|Int128, Int64, Int32, Int16, Int8|$2^{位元數-1}-1$|$-2^{位元數-1}$|\n",
-    "|無|UInt128, UInt64, UInt32, UInt16, UInt8|$2^{位元數}-1$|$0$|\n",
+    "|有|Int128, Int64, Int32, Int16, Int8|$2^{bits-1}-1$|$-2^{bits-1}$|\n",
+    "|無|UInt128, UInt64, UInt32, UInt16, UInt8|$2^{bits}-1$|$0$|\n",
     "\n",
     "|型別|最小值|最大值|\n",
     "|---|---|---|\n",
