--- a/Marathon/Day_009_array/julia_009_practice.ipynb
+++ b/Marathon/Day_009_array/julia_009_practice.ipynb
@@ -458,6 +458,165 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**(!!) warning**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Array{Any,1}:\n",
+       " 1\n",
+       " 1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = fill!(Vector(undef, 2), 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Array{Int64,1}:\n",
+       " 1\n",
+       " 1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = [1; 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isequal(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Array{Array{Int64,2},1}:\n",
+       " [1 1]\n",
+       " [1 1]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fill([1 1], size(a))  # size跟a一樣，但型別從Any改變成Array{Int64,2}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Array{Any,1}:\n",
+       " [1 1]\n",
+       " [1 1]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fill!(a, [1 1])  # size和型別都跟a一樣"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Array{Array{Int64,2},1}:\n",
+       " [1 1]\n",
+       " [1 1]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fill([1 1], size(b))  # size跟b一樣，但型別從Int64改變成Array{Int64,2}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "MethodError",
+     "evalue": "MethodError: Cannot `convert` an object of type Array{Int64,2} to an object of type Int64\nClosest candidates are:\n  convert(::Type{T}, !Matched::T) where T<:Number at number.jl:6\n  convert(::Type{T}, !Matched::Number) where T<:Number at number.jl:7\n  convert(::Type{T}, !Matched::Ptr) where T<:Integer at pointer.jl:23\n  ...",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: Cannot `convert` an object of type Array{Int64,2} to an object of type Int64\nClosest candidates are:\n  convert(::Type{T}, !Matched::T) where T<:Number at number.jl:6\n  convert(::Type{T}, !Matched::Number) where T<:Number at number.jl:7\n  convert(::Type{T}, !Matched::Ptr) where T<:Integer at pointer.jl:23\n  ...",
+      "",
+      "Stacktrace:",
+      " [1] fill!(::Array{Int64,1}, ::Array{Int64,2}) at .\\array.jl:336",
+      " [2] top-level scope at In[11]:1"
+     ]
+    }
+   ],
+   "source": [
+    "fill!(b, [1 1])  # 因為原本b的型別是Array{Int64,1}，所以要將[1 1]的型別從Array{Int64,2}轉型成Int64"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "cXX3dkGYORhq"
@@ -707,7 +866,232 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "建議水平連接使用空白，垂直連接使用分號會比較接近預期\n",
+    "但是用逗號可以連接物件(不同型別也可以)形成一個一維陣列(可以做到類似python的list的行為)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Array{Int64,2},1}:\n",
+       " [1 2]\n",
+       " [3 4]\n",
+       " [5 6]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[[1 2], [3 4], [5 6]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Array{Int64,N} where N,1}:\n",
+       " [1, 2]\n",
+       " [3 4]\n",
+       " [5 6]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[[1; 2], [3 4], [5 6]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Array{Array,1}:\n",
+       " [1.0, 2.2]\n",
+       " [3, 4]\n",
+       " [5 6]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[[1; 2.2], [3, 4], [5 6]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element Array{Any,1}:\n",
+       "  [1.0, 2.2]\n",
+       " 3\n",
+       " 4\n",
+       "  [5 6]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = [[1; 2.2], 3, 4, [5 6]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5-element Array{Any,1}:\n",
+       "  [1.0, 2.2]\n",
+       " 3\n",
+       " 4\n",
+       "  [5 6]\n",
+       " 5.0"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "push!(A, 5.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6-element Array{Any,1}:\n",
+       "  [1.0, 2.2]\n",
+       " 3\n",
+       " 4\n",
+       "  [5 6]\n",
+       " 5.0\n",
+       "  Any[[1.0, 2.2], 3, 4]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "push!(A, A[1:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2-element Array{Any,1}:\n",
+       "   Any[[1.0, 2.2], 3, 4, [5 6], 5.0, Any[[1.0, 2.2], 3, 4]]\n",
+       " 3//14"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[A, 3//14]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8-element Array{Any,1}:\n",
+       "  [1.0, 2.2]\n",
+       " 3\n",
+       " 4\n",
+       "  [5 6]\n",
+       " 5.0\n",
+       "  Any[[1.0, 2.2], 3, 4]\n",
+       " 3\n",
+       " 4"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "append!(A, A[2:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×2 Array{Int64,2}:\n",
+       " 1  2\n",
+       " 3  4\n",
+       " 5  6"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 分號會只能連接成二維陣列\n",
+    "[[1 2]; [3 4]; [5 6]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "建議水平連接使用空白，垂直連接使用分號會比較接近預期(接近matlab)\n",
     "\n",
     "|Syntax|Function|Description|\n",
     "|---|---|---\n",
