--- a/Marathon/Day_033_CNN/julia_033_hw.ipynb
+++ b/Marathon/Day_033_CNN/julia_033_hw.ipynb
@@ -15,7 +15,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Precompiling MLDatasets [eb30cadb-4394-5ae3-aed4-317e484a6458]\n",
+      "└ @ Base loading.jl:1260\n"
+     ]
+    }
+   ],
    "source": [
     "using Flux\n",
     "using Flux.Data: DataLoader\n",
@@ -160,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,29 +186,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## data loader"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train = DataLoader(train_X, train_y, batchsize=batchsize, shuffle=true);\n",
-    "test = DataLoader(test_X, test_y, batchsize=batchsize);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## loss function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +240,7 @@
        "accuracy (generic function with 1 method)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +268,7 @@
        "Chain(Conv((3, 3), 3=>16, relu), MaxPool((2, 2), pad = (0, 0, 0, 0), stride = (2, 2)), Conv((3, 3), 16=>32, relu), MaxPool((2, 2), pad = (0, 0, 0, 0), stride = (2, 2)), Conv((3, 3), 32=>32, relu), MaxPool((2, 2), pad = (0, 0, 0, 0), stride = (2, 2)), flatten, Dense(512, 10), logsoftmax)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,12 +310,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## data loader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = DataLoader(train_X, train_y, batchsize=batchsize, shuffle=true);\n",
+    "test = DataLoader(test_X, test_y, batchsize=batchsize);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## training model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -338,8 +347,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_loss() = 2.3031383f0\n",
-      "test_loss() = 1.2359419f0\n"
+      "test_loss() = 2.287951f0\n"
      ]
     },
     {
@@ -347,7 +355,20 @@
      "output_type": "stream",
      "text": [
       "┌ Info: Epoch 2\n",
-      "└ @ Main C:\\Users\\kai\\.julia\\packages\\Flux\\Fj3bt\\src\\optimise\\train.jl:121\n",
+      "└ @ Main C:\\Users\\kai\\.julia\\packages\\Flux\\Fj3bt\\src\\optimise\\train.jl:121\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_loss() = 1.1506466f0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "┌ Info: Epoch 3\n",
       "└ @ Main C:\\Users\\kai\\.julia\\packages\\Flux\\Fj3bt\\src\\optimise\\train.jl:121\n"
      ]
@@ -356,7 +377,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_loss() = 0.84129167f0\n"
+      "test_loss() = 0.78310627f0\n"
      ]
     },
     {
@@ -371,8 +392,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_loss() = 0.73975223f0\n",
-      "test_loss() = 0.6946958f0\n"
+      "test_loss() = 0.7301122f0\n",
+      "test_loss() = 0.73250383f0\n"
      ]
     },
     {
@@ -380,6 +401,8 @@
      "output_type": "stream",
      "text": [
       "┌ Info: Epoch 5\n",
+      "└ @ Main C:\\Users\\kai\\.julia\\packages\\Flux\\Fj3bt\\src\\optimise\\train.jl:121\n",
+      "┌ Info: Epoch 6\n",
       "└ @ Main C:\\Users\\kai\\.julia\\packages\\Flux\\Fj3bt\\src\\optimise\\train.jl:121\n"
      ]
     },
@@ -387,15 +410,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_loss() = 0.6677616f0\n"
+      "test_loss() = 0.67350996f0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "┌ Info: Epoch 6\n",
-      "└ @ Main C:\\Users\\kai\\.julia\\packages\\Flux\\Fj3bt\\src\\optimise\\train.jl:121\n",
       "┌ Info: Epoch 7\n",
       "└ @ Main C:\\Users\\kai\\.julia\\packages\\Flux\\Fj3bt\\src\\optimise\\train.jl:121\n"
      ]
@@ -404,7 +425,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_loss() = 0.6341647f0\n"
+      "test_loss() = 0.67383754f0\n"
      ]
     },
     {
@@ -419,8 +440,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_loss() = 0.6245042f0\n",
-      "test_loss() = 0.61042625f0\n"
+      "test_loss() = 0.67484856f0\n"
      ]
     },
     {
@@ -435,7 +455,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_loss() = 0.60359424f0\n"
+      "test_loss() = 0.6864637f0\n"
      ]
     },
     {
@@ -450,7 +470,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_loss() = 0.61374575f0\n"
+      "test_loss() = 0.6537585f0\n"
      ]
     },
     {
@@ -465,7 +485,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_loss() = 0.6482f0\n"
+      "test_loss() = 0.63579637f0\n"
      ]
     },
     {
@@ -480,7 +500,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_loss() = 0.6079829f0\n"
+      "test_loss() = 0.66289586f0\n"
      ]
     },
     {
@@ -488,7 +508,20 @@
      "output_type": "stream",
      "text": [
       "┌ Info: Epoch 13\n",
-      "└ @ Main C:\\Users\\kai\\.julia\\packages\\Flux\\Fj3bt\\src\\optimise\\train.jl:121\n",
+      "└ @ Main C:\\Users\\kai\\.julia\\packages\\Flux\\Fj3bt\\src\\optimise\\train.jl:121\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_loss() = 0.6775801f0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "┌ Info: Epoch 14\n",
       "└ @ Main C:\\Users\\kai\\.julia\\packages\\Flux\\Fj3bt\\src\\optimise\\train.jl:121\n"
      ]
@@ -497,7 +530,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_loss() = 0.6164887f0\n"
+      "test_loss() = 0.6500303f0\n"
      ]
     },
     {
@@ -512,7 +545,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_loss() = 0.6589031f0\n"
+      "test_loss() = 0.6918682f0\n",
+      "test_loss() = 0.73753077f0\n"
      ]
     },
     {
@@ -520,21 +554,7 @@
      "output_type": "stream",
      "text": [
       "┌ Info: Epoch 16\n",
-      "└ @ Main C:\\Users\\kai\\.julia\\packages\\Flux\\Fj3bt\\src\\optimise\\train.jl:121\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test_loss() = 0.65968484f0\n",
-      "test_loss() = 0.6676631f0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "└ @ Main C:\\Users\\kai\\.julia\\packages\\Flux\\Fj3bt\\src\\optimise\\train.jl:121\n",
       "┌ Info: Epoch 17\n",
       "└ @ Main C:\\Users\\kai\\.julia\\packages\\Flux\\Fj3bt\\src\\optimise\\train.jl:121\n"
      ]
@@ -543,7 +563,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_loss() = 0.66870385f0\n"
+      "test_loss() = 0.7334339f0\n",
+      "test_loss() = 0.7139645f0\n"
      ]
     },
     {
@@ -551,8 +572,6 @@
      "output_type": "stream",
      "text": [
       "┌ Info: Epoch 18\n",
-      "└ @ Main C:\\Users\\kai\\.julia\\packages\\Flux\\Fj3bt\\src\\optimise\\train.jl:121\n",
-      "┌ Info: Epoch 19\n",
       "└ @ Main C:\\Users\\kai\\.julia\\packages\\Flux\\Fj3bt\\src\\optimise\\train.jl:121\n"
      ]
     },
@@ -560,16 +579,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_loss() = 0.6497834f0\n",
-      "test_loss() = 0.6821816f0\n"
+      "test_loss() = 0.7340827f0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "┌ Info: Epoch 19\n",
+      "└ @ Main C:\\Users\\kai\\.julia\\packages\\Flux\\Fj3bt\\src\\optimise\\train.jl:121\n",
       "┌ Info: Epoch 20\n",
       "└ @ Main C:\\Users\\kai\\.julia\\packages\\Flux\\Fj3bt\\src\\optimise\\train.jl:121\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_loss() = 0.79189324f0\n"
      ]
     }
    ],
@@ -586,14 +613,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Warning: Performing scalar operations on GPU arrays: This is very slow, consider disallowing these operations with `allowscalar(false)`\n",
+      "└ @ GPUArrays C:\\Users\\kai\\.julia\\packages\\GPUArrays\\OXvxB\\src\\host\\indexing.jl:43\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 82.60%\n"
+      "Accuracy: 81.25%\n"
      ]
     }
    ],
