Difference between IJulia and REPL

--- a/playground/practice.ipynb
+++ b/playground/practice.ipynb
@@ -80,11 +80,177 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Variable scope in IJulia Jupyter notebook\n",
+    "https://discourse.julialang.org/t/variable-scope-in-ijulia-jupyter-notebook/38264"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10-element Array{String,1}:\n",
+       " \"7\"\n",
+       " \"8\"\n",
+       " \"7\"\n",
+       " \"8\"\n",
+       " \"7\"\n",
+       " \"8\"\n",
+       " \"7\"\n",
+       " \"8\"\n",
+       " \"7\"\n",
+       " \"8\""
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = String[];\n",
+    "for i = 1:5\n",
+    "    b = String[];\n",
+    "    for j=7:8\n",
+    "        b = vcat(b,\"$j\");    \n",
+    "    end\n",
+    "    a = vcat(a,b); # UndefVarError\n",
+    "end\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{tabular}\n",
+       "{l | r | l}\n",
+       "name & size & summary \\\\\n",
+       "\\hline\n",
+       "Base &  & Module \\\\\n",
+       "Core &  & Module \\\\\n",
+       "Main &  & Module \\\\\n",
+       "a & 210 bytes & 10-element Array\\{String,1\\} \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "| name |      size | summary                    |\n",
+       "|:---- | ---------:|:-------------------------- |\n",
+       "| Base |           | Module                     |\n",
+       "| Core |           | Module                     |\n",
+       "| Main |           | Module                     |\n",
+       "| a    | 210 bytes | 10-element Array{String,1} |\n"
+      ],
+      "text/plain": [
+       "  name      size summary                   \n",
+       "  –––– ––––––––– ––––––––––––––––––––––––––\n",
+       "  Base           Module                    \n",
+       "  Core           Module                    \n",
+       "  Main           Module                    \n",
+       "  a    210 bytes 10-element Array{String,1}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "varinfo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"7\", \"8\", \"7\", \"8\", \"7\", \"8\", \"7\", \"8\", \"7\", \"8\"]\n"
+     ]
+    },
+    {
+     "ename": "LoadError",
+     "evalue": "UndefVarError: a not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: a not defined",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope at D:\\Devtools\\1st-JuliaMarathon\\playground\\scope_in_REPL.jl:22",
+      " [2] include(::String) at .\\client.jl:439",
+      " [3] top-level scope at In[3]:1"
+     ]
+    }
+   ],
+   "source": [
+    "include(\"scope_in_REPL.jl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{tabular}\n",
+       "{l | r | l}\n",
+       "name & size & summary \\\\\n",
+       "\\hline\n",
+       "Base &  & Module \\\\\n",
+       "Core &  & Module \\\\\n",
+       "Main &  & Module \\\\\n",
+       "a & 40 bytes & 0-element Array\\{String,1\\} \\\\\n",
+       "foo & 0 bytes & typeof(foo) \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "| name |     size | summary                   |\n",
+       "|:---- | --------:|:------------------------- |\n",
+       "| Base |          | Module                    |\n",
+       "| Core |          | Module                    |\n",
+       "| Main |          | Module                    |\n",
+       "| a    | 40 bytes | 0-element Array{String,1} |\n",
+       "| foo  |  0 bytes | typeof(foo)               |\n"
+      ],
+      "text/plain": [
+       "  name     size summary                  \n",
+       "  –––– –––––––– –––––––––––––––––––––––––\n",
+       "  Base          Module                   \n",
+       "  Core          Module                   \n",
+       "  Main          Module                   \n",
+       "  a    40 bytes 0-element Array{String,1}\n",
+       "  foo   0 bytes typeof(foo)              "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "varinfo()"
+   ]
   }
  ],
  "metadata": {
